ProjetCompil/Verif/Test/fail/identRedecl.cas
program
   	A : integer;
   	A : real;
begin
	NULL;
end.